service-loadBalancer-networking/gateway_api/gateway_api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gatewayweb
spec:
  gatewayClassName: cilium
  listeners: 
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes: 
        namespaces:
          from: Same
